Closed
Bug 917843
Opened 12 years ago
Closed 12 years ago
Handlify JS identifier APIs
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla27
People
(Reporter: jonco, Assigned: jonco)
References
Details
(Keywords: dev-doc-complete)
Attachments
(1 file)
|
4.37 KB,
patch
|
billm
:
review+
|
Details | Diff | Splinter Review |
No description provided.
| Assignee | ||
Comment 1•12 years ago
|
||
Attachment #806802 -
Flags: review?(wmccloskey)
Comment on attachment 806802 [details] [diff] [review]
handlify-identifier-apis
Review of attachment 806802 [details] [diff] [review]:
-----------------------------------------------------------------
::: dom/indexedDB/KeyPath.cpp
@@ +46,5 @@
> return false;
> }
>
> NS_ASSERTION(JSVAL_IS_STRING(stringVal), "This should never happen");
> + JS::Rooted<JSString*> str(aCx, JSVAL_TO_STRING(stringVal));
Can you use .toString() instead?
Attachment #806802 -
Flags: review?(wmccloskey) → review+
| Assignee | ||
Comment 3•12 years ago
|
||
Comment 4•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
| Assignee | ||
Updated•12 years ago
|
Keywords: dev-doc-needed
Comment 5•10 years ago
|
||
Docs updated (thanks :arai):
https://developer.mozilla.org/en-US/docs/Mozilla/Projects/SpiderMonkey/JSAPI_reference/JS_ValueToId
https://developer.mozilla.org/en-US/docs/Mozilla/Projects/SpiderMonkey/JSAPI_reference/JS_IsIdentifier
Technical review appreciated.
Keywords: dev-doc-needed → dev-doc-complete
You need to log in
before you can comment on or make changes to this bug.
Description
•