Bug 917843 - Handlify JS identifier APIs r=billm